--- a/sass/components/_elements.scss
+++ b/sass/components/_elements.scss
@@ -4,43 +4,77 @@
   margin-top: 0;
   margin-bottom: 0;
   padding: 0;
-}
-.elements__unit {
-  margin-right: 30px;
-}
 
-.elements__unit:nth-child(3n) {
-  margin-right: 0;
-  margin-bottom: 30px;
-}
+  &__unit {
+    margin-right: 30px;
 
-.elements__unit:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
+    &:nth-child(3n) {
+      margin-right: 0;
+      margin-bottom: 30px;
+    }
 
-.elements__unit--link {
-  display: block;
-  text-decoration: none;
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
 
-  transition-property: box-shadow;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+    &--link {
+      display: block;
+      text-decoration: none;
 
-.elements__unit--link:hover,
-.elements__unit--link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+      transition-property: box-shadow;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-.elements__unit--link-box {
-  position: relative;
-  overflow: hidden;
-}
+    &--link:hover,
+    &--link:focus {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 
-.elements__unit--link-box:hover .img-text,
-.elements__unit--link-box:focus .img-text {
-  transform: translateY(-100%);
+    &--link-box {
+      position: relative;
+      overflow: hidden;
+    }
+
+    &--link-box:hover .img-text,
+    &--link-box:focus .img-text {
+      transform: translateY(-100%);
+    }
+    &--title {
+      margin: 0;
+      padding-top: 20px;
+      padding-bottom: 4px;
+      padding-left: 24px;
+
+      color: $title-text-color;
+      font-family: Roboto;
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 2;
+      letter-spacing: 0.06em;
+    }
+
+    &--title-box {
+      border-top: 0 solid #eeeeee;
+      border-right: 1px solid #eeeeee;
+      border-bottom: 1px solid #eeeeee;
+      border-left: 1px solid #eeeeee;
+    }
+
+    &--text {
+      margin: 0;
+      padding-bottom: 19px;
+      padding-left: 24px;
+
+      color: $primary-text-color;
+      font-family: Roboto;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1.9;
+      letter-spacing: 0.03em;
+    }
+  }
 }
 
 .img-text {
@@ -60,38 +94,4 @@
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.elements__unit--title {
-  margin: 0;
-  padding-top: 20px;
-  padding-bottom: 4px;
-  padding-left: 24px;
-
-  color: $title-text-color;
-  font-family: Roboto;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-}
-
-.elements__unit--title-box {
-  border-top: 0 solid #eeeeee;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
-}
-
-.elements__unit--text {
-  margin: 0;
-  padding-bottom: 19px;
-  padding-left: 24px;
-
-  color: $primary-text-color;
-  font-family: Roboto;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.03em;
 }
