--- a/css/main.css
+++ b/css/main.css
@@ -378,8 +378,7 @@ li {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav__link:hover,
-.nav__link:focus {
+.nav__link:hover, .nav__link:focus {
   color: #2196f3;
 }
 
@@ -421,8 +420,7 @@ li {
   margin-right: 30px;
 }
 
-.address__header:hover,
-.address__header:focus {
+.address__header:hover, .address__header:focus {
   color: #2196f3;
 }
 
@@ -685,23 +683,7 @@ li {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-network__circle:not(:last-child) {
-  margin-right: 10px;
-}
-
-.social-network__icon {
-  margin: 0;
-  padding: 0;
-  height: 20px;
-  width: 20px;
-  fill: #afb1b8;
-  transition-property: background-color, fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-network__element:hover,
-.social-network__element:focus {
+.social-network__element:hover, .social-network__element:focus {
   background-color: #2196f3;
 }
 
@@ -709,12 +691,6 @@ li {
 .social-network__element:focus .social-network__icon {
   background-color: #2196f3;
   fill: #ffffff;
-}
-
-.social-network-two {
-  margin: 0;
-  padding: 0;
-  display: flex;
 }
 
 .social-network__element-two {
@@ -730,6 +706,21 @@ li {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.social-network__circle:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-network__icon {
+  margin: 0;
+  padding: 0;
+  height: 20px;
+  width: 20px;
+  fill: #afb1b8;
+  transition-property: background-color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .social-network__icon-two {
   margin: 0;
   padding: 0;
@@ -738,8 +729,13 @@ li {
   fill: #ffffff;
 }
 
-.social-network__element-two:hover,
-.social-network__element-two:focus {
+.social-network-two {
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.social-network__element-two:hover, .social-network__element-two:focus {
   background-color: #2196f3;
 }
 
@@ -825,8 +821,7 @@ li {
   margin-bottom: 9px;
 }
 
-.address-footer:hover,
-.address-footer:focus {
+.address-footer:hover, .address-footer:focus {
   color: #2196f3;
 }
 
@@ -929,8 +924,7 @@ li {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter__button:hover,
-.filter__button:focus {
+.filter__button:hover, .filter__button:focus {
   color: #ffffff;
   background: #2196f3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -965,8 +959,7 @@ li {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.elements__unit--link:hover,
-.elements__unit--link:focus {
+.elements__unit--link:hover, .elements__unit--link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -978,24 +971,6 @@ li {
 .elements__unit--link-box:hover .img-text,
 .elements__unit--link-box:focus .img-text {
   transform: translateY(-100%);
-}
-
-.img-text {
-  margin: 0;
-  padding: 63px 24px 0 24px;
-  height: 294px;
-  display: block;
-  font-family: Roboto;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.6;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  background-color: rgba(33, 150, 243, 0.9);
-  position: absolute;
-  transition-property: transform;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .elements__unit--title {
@@ -1030,6 +1005,24 @@ li {
   letter-spacing: 0.03em;
 }
 
+.img-text {
+  margin: 0;
+  padding: 63px 24px 0 24px;
+  height: 294px;
+  display: block;
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: rgba(33, 150, 243, 0.9);
+  position: absolute;
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 /* client css */
 .clients-section {
   padding-top: 94px;
@@ -1052,22 +1045,45 @@ li {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client__element1 {
-  height: 90px;
-}
-
 .client__element:not(:last-child) {
   margin-right: 30px;
 }
 
-.client__element:hover,
-.client__element1:focus {
+.client__element1 {
+  height: 90px;
+}
+
+.client__element:hover, .client__element1:focus {
   border: 1px solid #2196f3;
 }
 
-/* client1 list css*/
 .client__element:hover .client1-icon,
 .client__element1:focus .client1-icon {
+  fill: #2196f3;
+}
+
+.client__element:hover .client2-icon,
+.client__element1:focus .client2-icon {
+  fill: #2196f3;
+}
+
+.client__element:hover .client3-icon,
+.client__element1:focus .client3-icon {
+  fill: #2196f3;
+}
+
+.client__element:hover .client4-icon,
+.client__element1:focus .client4-icon {
+  fill: #2196f3;
+}
+
+.client__element:hover .client5-icon,
+.client__element1:focus .client5-icon {
+  fill: #2196f3;
+}
+
+.client__element:hover .client6-icon,
+.client__element1:focus .client6-icon {
   fill: #2196f3;
 }
 
@@ -1087,11 +1103,6 @@ li {
 }
 
 /* client2 list css*/
-.client__element:hover .client2-icon,
-.client__element1:focus .client2-icon {
-  fill: #2196f3;
-}
-
 .client2 {
   display: block;
   padding-top: 19px;
@@ -1108,11 +1119,6 @@ li {
 }
 
 /* client3 list css*/
-.client__element:hover .client3-icon,
-.client__element1:focus .client3-icon {
-  fill: #2196f3;
-}
-
 .client3 {
   display: block;
   padding-top: 24px;
@@ -1129,11 +1135,6 @@ li {
 }
 
 /* client4 list css*/
-.client__element:hover .client4-icon,
-.client__element1:focus .client4-icon {
-  fill: #2196f3;
-}
-
 .client4 {
   display: block;
   padding-top: 24px;
@@ -1150,11 +1151,6 @@ li {
 }
 
 /* client5 list css*/
-.client__element:hover .client5-icon,
-.client__element1:focus .client5-icon {
-  fill: #2196f3;
-}
-
 .client5 {
   display: block;
   padding-top: 22px;
@@ -1171,11 +1167,6 @@ li {
 }
 
 /* client6 list css*/
-.client__element:hover .client6-icon,
-.client__element1:focus .client6-icon {
-  fill: #2196f3;
-}
-
 .client6 {
   display: block;
   padding-top: 22px;
@@ -1309,6 +1300,65 @@ li {
   fill: #2196f3;
 }
 
+.form__contract {
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.72;
+  letter-spacing: 0.03em;
+  color: #2196f3;
+}
+
+.form__checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
+
+.form__checkbox-label {
+  align-items: center;
+  justify-content: center;
+  margin-right: 7px;
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.form__checkbox-icon {
+  margin-right: 7px;
+  display: block;
+  width: 16px;
+  height: 15px;
+  border: 1px solid #212121;
+  border-radius: 2px;
+}
+
+.form__button {
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  height: 50px;
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 0;
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+}
+
 .name-icon {
   position: absolute;
   top: 50%;
@@ -1339,48 +1389,6 @@ li {
   border-color: #2196f3;
 }
 
-.form__checkbox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.form__checkbox-label {
-  align-items: center;
-  justify-content: center;
-  margin-right: 7px;
-  font-family: Roboto;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-
-.form__contract {
-  font-family: Roboto;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.72;
-  letter-spacing: 0.03em;
-  color: #2196f3;
-}
-
-.form__checkbox {
-  margin: 0;
-  padding-top: 20px;
-  padding-bottom: 30px;
-}
-
-.form__checkbox-icon {
-  margin-right: 7px;
-  display: block;
-  width: 16px;
-  height: 15px;
-  border: 1px solid #212121;
-  border-radius: 2px;
-}
-
 .checkbox {
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -1394,26 +1402,5 @@ li {
   background-image: url(../images/icon-check.svg);
   background-size: contain;
   background-origin: border-box;
-}
-
-.form__button {
-  margin-left: auto;
-  margin-right: auto;
-  width: 200px;
-  height: 50px;
-  background: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: 0;
-  font-family: Roboto;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.875;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-  /* transform: translateX(50%); */
 }
 /*# sourceMappingURL=main.css.map */
