--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -7,25 +7,24 @@
   background: rgba(0, 0, 0, 0.2);
   overflow: auto;
   opacity: 1;
-}
 
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
+  &.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+  &-text {
+    margin: 0;
+    padding-top: 40px;
+    padding-left: 41px;
+    padding-bottom: 2px;
+    font-family: Roboto;
 
-.backdrop-text {
-  margin: 0;
-  padding-top: 40px;
-  padding-left: 41px;
-  padding-bottom: 2px;
-  font-family: Roboto;
-
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: left;
-  letter-spacing: 0.03em;
-  color: $title-text-color;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: left;
+    letter-spacing: 0.03em;
+    color: $title-text-color;
+  }
 }
