--- a/sass/components/_command.scss
+++ b/sass/components/_command.scss
@@ -7,42 +7,43 @@
 .command {
   margin: 0;
   padding: 0;
-}
 
-.command__element {
-  padding-bottom: 30px;
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  /* border-style: solid; */
-}
-.command__element:not(:last-child) {
-  margin-right: 30px;
-}
+  &__element {
+    padding-bottom: 30px;
+    background: #ffffff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    /* border-style: solid; */
 
-.command__name {
-  margin: 0;
-  padding-top: 30px;
-  padding-bottom: 10px;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
 
-  color: $title-text-color;
-  font-family: Roboto;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.2;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
-.command__profession {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-bottom: 16px;
+  &__name {
+    margin: 0;
+    padding-top: 30px;
+    padding-bottom: 10px;
 
-  font-family: Roboto;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
+    color: $title-text-color;
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.2;
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
+  &__profession {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 16px;
+
+    font-family: Roboto;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
 }
