--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -3,45 +3,111 @@
   padding-top: 0;
   padding-left: 40px;
   padding-right: 40px;
+
+  &__unit {
+    /* margin-top: 4px; */
+    position: relative;
+    display: block;
+
+    &__text {
+      display: block;
+      padding-top: 10px;
+      padding-bottom: 4px;
+      font-family: Roboto;
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 1.2;
+      letter-spacing: 0.01em;
+
+      color: #757575;
+    }
+  }
+
+  &__input {
+    padding-left: 42px;
+    display: block;
+    width: 100%;
+    height: 40px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: none;
+
+    &:focus {
+      border-color: $accent-color;
+    }
+
+    &:focus + .name-icon {
+      fill: $accent-color;
+    }
+  }
+
+  &__contract {
+    font-family: Roboto;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.72;
+
+    letter-spacing: 0.03em;
+
+    color: $accent-color;
+  }
+  &__checkbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding-top: 20px;
+    padding-bottom: 30px;
+
+    &-label {
+      align-items: center;
+      justify-content: center;
+      margin-right: 7px;
+      font-family: Roboto;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 1.71;
+
+      letter-spacing: 0.03em;
+
+      color: $primary-text-color;
+    }
+
+    &-icon {
+      margin-right: 7px;
+      display: block;
+      width: 16px;
+      height: 15px;
+
+      border: 1px solid $title-text-color;
+
+      border-radius: 2px;
+    }
+  }
+
+  &__button {
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    height: 50px;
+
+    background: #188ce8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: 0;
+    font-family: Roboto;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.875;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    letter-spacing: 0.06em;
+    color: $white-color;
+  }
 }
 
-.form__unit {
-  /* margin-top: 4px; */
-  position: relative;
-  display: block;
-}
-
-.form__unit__text {
-  display: block;
-  padding-top: 10px;
-  padding-bottom: 4px;
-  font-family: Roboto;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.2;
-  letter-spacing: 0.01em;
-
-  color: #757575;
-}
-
-.form__input {
-  padding-left: 42px;
-  display: block;
-  width: 100%;
-  height: 40px;
-
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  outline: none;
-}
-
-.form__input:focus {
-  border-color: $accent-color;
-}
-
-.form__input:focus + .name-icon {
-  fill: $accent-color;
-}
 .name-icon {
   position: absolute;
   top: 50%;
@@ -69,58 +135,10 @@
   letter-spacing: 0.01em;
 
   outline: none;
-}
 
-.textarea-form:focus {
-  border-color: $accent-color;
-}
-
-.form__checkbox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.form__checkbox-label {
-  align-items: center;
-  justify-content: center;
-  margin-right: 7px;
-  font-family: Roboto;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-
-  letter-spacing: 0.03em;
-
-  color: $primary-text-color;
-}
-
-.form__contract {
-  font-family: Roboto;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.72;
-
-  letter-spacing: 0.03em;
-
-  color: $accent-color;
-}
-
-.form__checkbox {
-  margin: 0;
-  padding-top: 20px;
-  padding-bottom: 30px;
-}
-
-.form__checkbox-icon {
-  margin-right: 7px;
-  display: block;
-  width: 16px;
-  height: 15px;
-
-  border: 1px solid $title-text-color;
-
-  border-radius: 2px;
+  &:focus {
+    border-color: $accent-color;
+  }
 }
 
 .checkbox {
@@ -128,35 +146,12 @@
   -webkit-appearance: none;
   appearance: none;
   position: absolute;
-}
 
-.checkbox:checked + .form__checkbox-icon {
-  background-color: $accent-color;
-  border-color: $accent-color;
-  background-image: url(../images/icon-check.svg);
-  background-size: contain;
-  background-origin: border-box;
-}
-
-.form__button {
-  margin-left: auto;
-  margin-right: auto;
-  width: 200px;
-  height: 50px;
-
-  background: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: 0;
-  font-family: Roboto;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.875;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  letter-spacing: 0.06em;
-  color: $white-color;
-
-  /* transform: translateX(50%); */
+  &:checked + .form__checkbox-icon {
+    background-color: $accent-color;
+    border-color: $accent-color;
+    background-image: url(../images/icon-check.svg);
+    background-size: contain;
+    background-origin: border-box;
+  }
 }
