--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,8 +2,9 @@
   padding-top: 24px;
   padding-bottom: 24px;
   border-bottom: 1px solid #ececec;
-}
-.header__container {
-  align-items: center;
-  justify-content: flex-start;
+
+  &__container {
+    align-items: center;
+    justify-content: flex-start;
+  }
 }
