--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -13,46 +13,46 @@
   background-color: black;
   background-position: center;
   background-repeat: no-repeat;
-}
 
-.hero__box {
-  padding-top: 0;
-  padding-bottom: 0;
-  width: 696px;
-  margin-left: auto;
-  margin-right: auto;
-}
+  &__box {
+    padding-top: 0;
+    padding-bottom: 0;
+    width: 696px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-.hero__title {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 30px;
+  &__title {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 30px;
 
-  color: $white-color;
-  font-family: Roboto;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.365;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-}
-.hero__button {
-  border: 0;
-  border-radius: 4px;
-  padding: 10px 32px;
-  margin-left: auto;
-  margin-right: auto;
+    color: $white-color;
+    font-family: Roboto;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.365;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+  }
+  &__button {
+    border: 0;
+    border-radius: 4px;
+    padding: 10px 32px;
+    margin-left: auto;
+    margin-right: auto;
 
-  color: $white-color;
-  background: $accent-color;
-  font-family: Roboto;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.875;
-  display: flex;
-  text-align: center;
-  letter-spacing: 0.06em;
+    color: $white-color;
+    background: $accent-color;
+    font-family: Roboto;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.875;
+    display: flex;
+    text-align: center;
+    letter-spacing: 0.06em;
+  }
 }
