--- a/sass/components/_image-box.scss
+++ b/sass/components/_image-box.scss
@@ -6,31 +6,31 @@
 .employment {
   margin: 0;
   padding: 0;
-}
 
-.employment__photo {
-  position: relative;
-}
+  &__photo {
+    position: relative;
 
-.employment__photo:not(:last-child) {
-  margin-right: 30px;
-}
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
 
-.employment__photo__text {
-  margin: 0;
-  padding-top: 27px;
-  padding-bottom: 27px;
-  width: 370px;
-  font-family: Roboto;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: $white-color;
-  background-color: rgba(47, 48, 58, 0.8);
+    &__text {
+      margin: 0;
+      padding-top: 27px;
+      padding-bottom: 27px;
+      width: 370px;
+      font-family: Roboto;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.15;
+      text-align: center;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      color: $white-color;
+      background-color: rgba(47, 48, 58, 0.8);
 
-  position: absolute;
-  bottom: 0;
+      position: absolute;
+      bottom: 0;
+    }
+  }
 }
