--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,8 +11,8 @@
   border-radius: 4px;
 
   transition: transform 550ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
-}
 
-.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0);
+  .is-hidden & {
+    transform: translate(-50%, -50%) scale(0);
+  }
 }
