--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -2,74 +2,76 @@
   display: flex;
   align-items: center;
   margin-right: auto;
-}
 
-.nav__list {
-  margin: 0;
-  padding: 0;
-}
-.nav__list .item:not(:last-child) {
-  margin-right: 50px;
-}
+  &__list {
+    margin: 0;
+    padding: 0;
 
-.nav__logo {
-  display: block;
-  margin-right: 93px;
+    & .item:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
 
-  color: $accent-color;
-  text-decoration: none;
-}
-.nav__title {
-  margin-top: 0;
-  margin-bottom: 0;
+  &__logo {
+    display: block;
+    margin-right: 93px;
 
-  color: $accent-color;
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-}
+    color: $accent-color;
+    text-decoration: none;
+  }
 
-.nav__title--secondary {
-  color: $title-text-color;
-}
+  &__title {
+    margin-top: 0;
+    margin-bottom: 0;
 
-.nav__link {
-  display: block;
-  padding-top: 0;
-  padding-bottom: 0;
-  position: relative;
+    color: $accent-color;
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
 
-  color: $title-text-color;
-  font-family: Roboto;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.15;
-  letter-spacing: 0.02em;
-  text-decoration: none;
+    &--secondary {
+      color: $title-text-color;
+    }
+  }
 
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &__link {
+    display: block;
+    padding-top: 0;
+    padding-bottom: 0;
+    position: relative;
 
-.nav__link:hover,
-.nav__link:focus {
-  color: $accent-color;
-}
+    color: $title-text-color;
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.15;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 
-.nav__link.nav__link--activ {
-  color: $accent-color;
-}
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-.nav__link--activ::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -32px;
-  width: 100%;
-  height: 4px;
-  background-color: #2196f3;
-  border-radius: 2px;
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
+
+    &.nav__link--activ {
+      color: $accent-color;
+    }
+
+    &--activ::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -32px;
+      width: 100%;
+      height: 4px;
+      background-color: #2196f3;
+      border-radius: 2px;
+    }
+  }
 }
