--- a/sass/components/_social-network.scss
+++ b/sass/components/_social-network.scss
@@ -3,77 +3,77 @@
   padding: 0;
   display: flex;
   justify-content: center;
-}
 
-.social-network__element {
-  padding-top: 12px;
-  padding-left: 12px;
-  display: block;
-  height: 44px;
-  width: 44px;
-  border-radius: 50%;
+  &__element {
+    padding-top: 12px;
+    padding-left: 12px;
+    display: block;
+    height: 44px;
+    width: 44px;
+    border-radius: 50%;
 
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-.social-network__circle:not(:last-child) {
-  margin-right: 10px;
-}
+    &:hover,
+    &:focus {
+      background-color: $accent-color;
+    }
 
-.social-network__icon {
-  margin: 0;
-  padding: 0;
-  height: 20px;
-  width: 20px;
-  fill: #afb1b8;
+    &:hover .social-network__icon,
+    &:focus .social-network__icon {
+      background-color: $accent-color;
+      fill: $white-color;
+    }
 
-  transition-property: background-color, fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+    &-two {
+      padding-top: 12px;
+      padding-left: 12px;
+      display: block;
+      height: 44px;
+      width: 44px;
+      border-radius: 50%;
+      background-color: rgba(255, 255, 255, 0.1);
 
-.social-network__element:hover,
-.social-network__element:focus {
-  background-color: $accent-color;
-}
+      transition-property: background-color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
 
-.social-network__element:hover .social-network__icon,
-.social-network__element:focus .social-network__icon {
-  background-color: $accent-color;
-  fill: $white-color;
-}
+  &__circle:not(:last-child) {
+    margin-right: 10px;
+  }
 
-.social-network-two {
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
+  &__icon {
+    margin: 0;
+    padding: 0;
+    height: 20px;
+    width: 20px;
+    fill: #afb1b8;
 
-.social-network__element-two {
-  padding-top: 12px;
-  padding-left: 12px;
-  display: block;
-  height: 44px;
-  width: 44px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
+    transition-property: background-color, fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+    &-two {
+      margin: 0;
+      padding: 0;
+      height: 20px;
+      width: 20px;
+      fill: $white-color;
+    }
+  }
 
-.social-network__icon-two {
-  margin: 0;
-  padding: 0;
-  height: 20px;
-  width: 20px;
-  fill: $white-color;
-}
+  &-two {
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
 
-.social-network__element-two:hover,
-.social-network__element-two:focus {
-  background-color: $accent-color;
+  &__element-two:hover,
+  &__element-two:focus {
+    background-color: $accent-color;
+  }
 }
